fixed the cancel buttons alignment

--- a/frontend/src/components/EditProfileModals/EditProfileModals.css
+++ b/frontend/src/components/EditProfileModals/EditProfileModals.css
@@ -143,7 +143,8 @@
     width: 98%;
     display: flex;
     justify-content: flex-end;
-    margin-top: 15px;
+    margin-top: 35px;
+    /* margin-left: 15px; */
 
     cursor: pointer;
 }
